Changes in htmls

--- a/CreditScorePrediction/Templates/member.html
+++ b/CreditScorePrediction/Templates/member.html
@@ -36,9 +36,9 @@
               <th>Occupation</th>
               <th>Age</th>
               <th>Credit History Age</th>
-              <th>Outstanding Debt</th>
+              <th>Outstanding Debt (in Taka)</th>
               <th>Delay from Due Date</th>
-              <th>Interest rate</th>
+              <th>Interest rate (%)</th>
               <th>Credit Score</th>
               <th>Show Details</th>
             </tr>
