--- a/CreditScorePrediction/Templates/second.html
+++ b/CreditScorePrediction/Templates/second.html
@@ -104,7 +104,7 @@
               </div>
 
               <div class="input-field">
-                <label for="outstanding_debt">Outstanding Debt</label>
+                <label for="outstanding_debt">Outstanding Debt (in Taka)</label>
                 <input
                   type="number"
                   id="outstanding_debt"
@@ -130,7 +130,9 @@
               </div>
 
               <div class="input-field">
-                <label for="total_emi_per_month">Total EMI Per Month</label>
+                <label for="total_emi_per_month"
+                  >Total EMI Per Month (in Taka)</label
+                >
                 <input
                   type="number"
                   id="total_emi_per_month"
@@ -143,7 +145,7 @@
 
               <div class="input-field">
                 <label for="amount_invested_monthly"
-                  >Amount Invested Monthly</label
+                  >Amount Invested Monthly (in Taka)</label
                 >
                 <input
                   type="number"
@@ -156,7 +158,7 @@
               </div>
 
               <div class="input-field">
-                <label for="monthly_balance">Monthly Balance</label>
+                <label for="monthly_balance">Monthly Balance (in Taka)</label>
                 <input
                   type="number"
                   id="monthly_balance"
