--- a/CreditScorePrediction/Templates/first.html
+++ b/CreditScorePrediction/Templates/first.html
@@ -113,7 +113,7 @@
               </div>
 
               <div class="input-field">
-                <label for="annual_income">Annual Income</label>
+                <label for="annual_income">Annual Income (in Taka)</label>
                 <input
                   type="number"
                   id="annual_income"
@@ -160,7 +160,7 @@
               </div>
 
               <div class="input-field">
-                <label for="interest_rate">Interest Rate</label>
+                <label for="interest_rate">Interest Rate (%)</label>
                 <input
                   type="number"
                   id="interest_rate"
