Deatils and first page more modifications are done

--- a/CreditScorePrediction/Templates/details.html
+++ b/CreditScorePrediction/Templates/details.html
@@ -168,7 +168,7 @@
                       class="small mb-1"
                       for="annual_income"
                       style="font-size: 12px; font-weight: 500"
-                      >Annual Income</label
+                      >Annual Income (in Taka)</label
                     >
                     <p class="outset">{{ customer_data.annualIncome }}</p>
                   </div>
@@ -178,7 +178,7 @@
                       class="small mb-1"
                       for="monthly_inhald_salary"
                       style="font-size: 12px; font-weight: 500"
-                      >Monthly Inhand Salary</label
+                      >Monthly Inhand Salary (in Taka)</label
                     >
                     <p class="outset">
                       {{ customer_data.monthlyInhaldSalary }}
@@ -214,7 +214,7 @@
                       class="small mb-1"
                       for="interest_rate"
                       style="font-size: 12px; font-weight: 500"
-                      >Interest Rate</label
+                      >Interest Rate (%)</label
                     >
                     <p class="outset">{{ customer_data.interestRate }}</p>
                   </div>
@@ -260,7 +260,7 @@
                       class="small mb-1"
                       for="outstanding_debt"
                       style="font-size: 12px; font-weight: 500"
-                      >Outstanding Debt</label
+                      >Outstanding Debt (in Taka)</label
                     >
                     <p class="outset">{{ customer_data.outstandingDebt }}</p>
                   </div>
@@ -284,7 +284,7 @@
                       class="small mb-1"
                       for="total_emi_per_month"
                       style="font-size: 12px; font-weight: 500"
-                      >Total EMI Per Month</label
+                      >Total EMI Per Month (in Taka)</label
                     >
                     <p class="outset">{{ customer_data.totalEMIPerMonth }}</p>
                   </div>
@@ -294,7 +294,7 @@
                       class="small mb-1"
                       for="amount_invested_monthly"
                       style="font-size: 12px; font-weight: 500"
-                      >Monthly Invested Amount</label
+                      >Monthly Invested Amount (in Taka)</label
                     >
                     <p class="outset">
                       {{ customer_data.amountInvestedMonthly }}
@@ -308,7 +308,7 @@
                       class="small mb-1"
                       for="monthly_balance"
                       style="font-size: 12px; font-weight: 500"
-                      >Monthly Balance</label
+                      >Monthly Balance (in Taka)</label
                     >
                     <p class="outset">{{ customer_data.monthlyBalance }}</p>
                   </div>
@@ -362,7 +362,8 @@
                       class="small mb-1"
                       for="num_credit_inquiries"
                       style="font-size: 12px; font-weight: 500"
-                      >Credit Inquiry Number</label
+                    >
+                      Number Credit Inquiries</label
                     >
                     <p class="outset">
                       {{ customer_data.numOfCreditInquiries }}
