--- a/CreditScorePrediction/Templates/first.html
+++ b/CreditScorePrediction/Templates/first.html
@@ -125,7 +125,9 @@
               </div>
 
               <div class="input-field">
-                <label for="monthly_inhald_salary">Monthly Inhand Salary</label>
+                <label for="monthly_inhald_salary"
+                  >Monthly Inhand Salary (in Taka)</label
+                >
                 <input
                   type="number"
                   id="monthly_inhald_salary"
