--- a/CreditScorePrediction/Templates/member.html
+++ b/CreditScorePrediction/Templates/member.html
@@ -16,10 +16,18 @@
       href="https://cdn.datatables.net/1.13.5/css/dataTables.bootstrap5.min.css"
     />
 
+    <link
+      href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+
     <title>Members List</title>
   </head>
 
   <body>
+    <button class="b">
+      <a href="{% url 'welcome' %}"><i class="bx bx-home"></i></a>
+    </button>
     <div class="container" style="position: relative; width: 1500px">
       <header>Credit Score Members</header>
 
