--- a/CreditScorePrediction/Templates/second.html
+++ b/CreditScorePrediction/Templates/second.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="{% static 'second.css' %}" />
 
     <!-- <link rel="stylesheet" href="second.css" /> -->
+    <link
+      href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css"
+      rel="stylesheet"
+    />
 
     <link
       rel="stylesheet"
@@ -20,6 +24,9 @@
   </head>
 
   <body>
+    <button class="b">
+      <a href="{% url 'welcome' %}"><i class="bx bx-home"></i></a>
+    </button>
     <div class="container">
       <header>Credit Score Form</header>
 
