--- a/CreditScorePrediction/static/third.css
+++ b/CreditScorePrediction/static/third.css
@@ -14,6 +14,21 @@ body {
   background-image: url("image/mar.jpg");
   background-size: cover;
 }
+.b {
+  color: #333;
+  position: fixed;
+  left: 30px;
+  bottom: 85%;
+  transform: translateY(-50%);
+  background-color: transparent;
+  border-color: transparent;
+  font-size: 35px;
+  cursor: pointer;
+}
+
+.b:hover {
+  color: #fff;
+}
 .container {
   position: relative;
   max-width: 600px;
